Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Private/Generate/Export/UWorld.h

	DOTNET_EXPORT auto E_PROP_UWorld_AudioTimeSeconds_GET(UWorld* Ptr) { return Ptr->AudioTimeSeconds; }
	DOTNET_EXPORT void E_PROP_UWorld_AudioTimeSeconds_SET(UWorld* Ptr, float Value) { Ptr->AudioTimeSeconds = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bCreateRenderStateForHiddenComponents_GET(UWorld* Ptr) { return Ptr->bCreateRenderStateForHiddenComponents; }
	DOTNET_EXPORT void E_PROP_UWorld_bCreateRenderStateForHiddenComponents_SET(UWorld* Ptr, bool Value) { Ptr->bCreateRenderStateForHiddenComponents = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bDebugDrawAllTraceTags_GET(UWorld* Ptr) { return Ptr->bDebugDrawAllTraceTags; }
	DOTNET_EXPORT void E_PROP_UWorld_bDebugDrawAllTraceTags_SET(UWorld* Ptr, bool Value) { Ptr->bDebugDrawAllTraceTags = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bDoDelayedUpdateCullDistanceVolumes_GET(UWorld* Ptr) { return Ptr->bDoDelayedUpdateCullDistanceVolumes; }
	DOTNET_EXPORT void E_PROP_UWorld_bDoDelayedUpdateCullDistanceVolumes_SET(UWorld* Ptr, bool Value) { Ptr->bDoDelayedUpdateCullDistanceVolumes = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bHack_Force_UsesGameHiddenFlags_True_GET(UWorld* Ptr) { return Ptr->bHack_Force_UsesGameHiddenFlags_True; }
	DOTNET_EXPORT void E_PROP_UWorld_bHack_Force_UsesGameHiddenFlags_True_SET(UWorld* Ptr, bool Value) { Ptr->bHack_Force_UsesGameHiddenFlags_True = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bInTick_GET(UWorld* Ptr) { return Ptr->bInTick; }
	DOTNET_EXPORT void E_PROP_UWorld_bInTick_SET(UWorld* Ptr, bool Value) { Ptr->bInTick = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bIsBuilt_GET(UWorld* Ptr) { return Ptr->bIsBuilt; }
	DOTNET_EXPORT void E_PROP_UWorld_bIsBuilt_SET(UWorld* Ptr, bool Value) { Ptr->bIsBuilt = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bIsLevelStreamingFrozen_GET(UWorld* Ptr) { return Ptr->bIsLevelStreamingFrozen; }
	DOTNET_EXPORT void E_PROP_UWorld_bIsLevelStreamingFrozen_SET(UWorld* Ptr, bool Value) { Ptr->bIsLevelStreamingFrozen = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bIsRunningConstructionScript_GET(UWorld* Ptr) { return Ptr->bIsRunningConstructionScript; }
	DOTNET_EXPORT void E_PROP_UWorld_bIsRunningConstructionScript_SET(UWorld* Ptr, bool Value) { Ptr->bIsRunningConstructionScript = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bIsWorldInitialized_GET(UWorld* Ptr) { return Ptr->bIsWorldInitialized; }
	DOTNET_EXPORT void E_PROP_UWorld_bIsWorldInitialized_SET(UWorld* Ptr, bool Value) { Ptr->bIsWorldInitialized = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bPostTickComponentUpdate_GET(UWorld* Ptr) { return Ptr->bPostTickComponentUpdate; }
	DOTNET_EXPORT void E_PROP_UWorld_bPostTickComponentUpdate_SET(UWorld* Ptr, bool Value) { Ptr->bPostTickComponentUpdate = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bShouldForceUnloadStreamingLevels_GET(UWorld* Ptr) { return Ptr->bShouldForceUnloadStreamingLevels; }
	DOTNET_EXPORT void E_PROP_UWorld_bShouldForceUnloadStreamingLevels_SET(UWorld* Ptr, bool Value) { Ptr->bShouldForceUnloadStreamingLevels = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bShouldForceVisibleStreamingLevels_GET(UWorld* Ptr) { return Ptr->bShouldForceVisibleStreamingLevels; }
	DOTNET_EXPORT void E_PROP_UWorld_bShouldForceVisibleStreamingLevels_SET(UWorld* Ptr, bool Value) { Ptr->bShouldForceVisibleStreamingLevels = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bShouldSimulatePhysics_GET(UWorld* Ptr) { return Ptr->bShouldSimulatePhysics; }
	DOTNET_EXPORT void E_PROP_UWorld_bShouldSimulatePhysics_SET(UWorld* Ptr, bool Value) { Ptr->bShouldSimulatePhysics = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bTickNewlySpawned_GET(UWorld* Ptr) { return Ptr->bTickNewlySpawned; }
	DOTNET_EXPORT void E_PROP_UWorld_bTickNewlySpawned_SET(UWorld* Ptr, bool Value) { Ptr->bTickNewlySpawned = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_CommittedPersistentLevelName_GET(UWorld* Ptr) { return ConvertToManage_StringWrapper(Ptr->CommittedPersistentLevelName); }
	DOTNET_EXPORT void E_PROP_UWorld_CommittedPersistentLevelName_SET(UWorld* Ptr, char* Value) { Ptr->CommittedPersistentLevelName = ConvertFromManage_FName(Value); }
	
	DOTNET_EXPORT auto E_PROP_UWorld_DebugDrawTraceTag_GET(UWorld* Ptr) { return ConvertToManage_StringWrapper(Ptr->DebugDrawTraceTag); }
	DOTNET_EXPORT void E_PROP_UWorld_DebugDrawTraceTag_SET(UWorld* Ptr, char* Value) { Ptr->DebugDrawTraceTag = ConvertFromManage_FName(Value); }
	
	DOTNET_EXPORT auto E_PROP_UWorld_DeltaTimeSeconds_GET(UWorld* Ptr) { return Ptr->DeltaTimeSeconds; }
	DOTNET_EXPORT void E_PROP_UWorld_DeltaTimeSeconds_SET(UWorld* Ptr, float Value) { Ptr->DeltaTimeSeconds = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_FlushLevelStreamingType_GET(UWorld* Ptr) { return Ptr->FlushLevelStreamingType; }
	DOTNET_EXPORT void E_PROP_UWorld_FlushLevelStreamingType_SET(UWorld* Ptr, EFlushLevelStreamingType Value) { Ptr->FlushLevelStreamingType = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_LastTimeUnbuiltLightingWasEncountered_GET(UWorld* Ptr) { return Ptr->LastTimeUnbuiltLightingWasEncountered; }
	DOTNET_EXPORT void E_PROP_UWorld_LastTimeUnbuiltLightingWasEncountered_SET(UWorld* Ptr, double Value) { Ptr->LastTimeUnbuiltLightingWasEncountered = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_NextSwitchCountdown_GET(UWorld* Ptr) { return Ptr->NextSwitchCountdown; }
	DOTNET_EXPORT void E_PROP_UWorld_NextSwitchCountdown_SET(UWorld* Ptr, float Value) { Ptr->NextSwitchCountdown = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_NextTravelType_GET(UWorld* Ptr) { return Ptr->NextTravelType; }
	DOTNET_EXPORT void E_PROP_UWorld_NextTravelType_SET(UWorld* Ptr, ETravelType Value) { Ptr->NextTravelType = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_NextURL_GET(UWorld* Ptr) { return ConvertToManage_StringWrapper(Ptr->NextURL); }
	DOTNET_EXPORT void E_PROP_UWorld_NextURL_SET(UWorld* Ptr, char* Value) { Ptr->NextURL = ConvertFromManage_FString(Value); }
	
	DOTNET_EXPORT auto E_PROP_UWorld_NumTextureStreamingDirtyResources_GET(UWorld* Ptr) { return Ptr->NumTextureStreamingDirtyResources; }
	DOTNET_EXPORT void E_PROP_UWorld_NumTextureStreamingDirtyResources_SET(UWorld* Ptr, int32 Value) { Ptr->NumTextureStreamingDirtyResources = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_NumTextureStreamingUnbuiltComponents_GET(UWorld* Ptr) { return Ptr->NumTextureStreamingUnbuiltComponents; }
	DOTNET_EXPORT void E_PROP_UWorld_NumTextureStreamingUnbuiltComponents_SET(UWorld* Ptr, int32 Value) { Ptr->NumTextureStreamingUnbuiltComponents = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_OriginOffsetThisFrame_GET(UWorld* Ptr) { return (INT_PTR)&(Ptr->OriginOffsetThisFrame); }
	DOTNET_EXPORT void E_PROP_UWorld_OriginOffsetThisFrame_SET(UWorld* Ptr, INT_PTR Value) { Ptr->OriginOffsetThisFrame = *(FVector*)Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_PauseDelay_GET(UWorld* Ptr) { return Ptr->PauseDelay; }
	DOTNET_EXPORT void E_PROP_UWorld_PauseDelay_SET(UWorld* Ptr, float Value) { Ptr->PauseDelay = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_PlayerNum_GET(UWorld* Ptr) { return Ptr->PlayerNum; }
	DOTNET_EXPORT void E_PROP_UWorld_PlayerNum_SET(UWorld* Ptr, int32 Value) { Ptr->PlayerNum = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_RealTimeSeconds_GET(UWorld* Ptr) { return Ptr->RealTimeSeconds; }
	DOTNET_EXPORT void E_PROP_UWorld_RealTimeSeconds_SET(UWorld* Ptr, float Value) { Ptr->RealTimeSeconds = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_StreamingVolumeUpdateDelay_GET(UWorld* Ptr) { return Ptr->StreamingVolumeUpdateDelay; }
	DOTNET_EXPORT void E_PROP_UWorld_StreamingVolumeUpdateDelay_SET(UWorld* Ptr, int32 Value) { Ptr->StreamingVolumeUpdateDelay = Value; }
	
	
	DOTNET_EXPORT INT_PTR E_NewObject_UWorld(UObject* Parent, char* Name)
	{
		return (INT_PTR)NewObject<UWorld>(Parent, FName(UTF8_TO_TCHAR(Name)));
	}